<resources>
    <string name="app_name">Hangman Pat</string>
    <string name="h1act1">Hangman</string>
    <string name="byAlfred">J-Alfred A edition</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="h1actOm">En man avrättades</string>
    <string name="story">Johan Alfred Andersson Ander, född 27 november 1873 i Ljusterö socken, död 23 november 1910 på Långholmens centralfängelse i Stockholm (avrättad), var en svensk kypare, värdshusvärd, spårvagnsförare och tillika den sista personen att avrättas i Sverige då han dömts för ett brutalt rånmord. Han är den ende som avrättats med giljotin i Sverige. - Wikipedia</string>
    <string name="author">App author: Patrik - koolsport.se\nIT-Högskolan, Göteborg</string>
    <string name="addName">Player name</string>
    <string name="playerAlias"/>
    <string name="hintname">Enter your name</string>
    <string name="play2">Play</string>
    <string name="bellToll">For whom the bell tolls?</string>
    <string name="youareex">Execution of</string>
    <string name="guess"/>
    <string name="guesshint">Guess letter</string>
    <string name="guessButton">Guess</string>
    <string name="hiddenWord"/>
    <string name="findWord">Guess word\nor get hanged!</string>
    <string name="startButton">Start again</string>
</resources>
